[package]
name = "example-tokio-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }

bb8 = "0.8.5"
bb8-postgres = "0.8.1"

tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres"] }
jsonwebtoken = "8.0"
once_cell = "1.8"
